Fix logo margin on mobile

--- a/styles/components/main-nav.less
+++ b/styles/components/main-nav.less
@@ -15,7 +15,7 @@
 
   // increase specificity to override Bootstrap styles
   .container .navbar-brand {
-    margin: 12px 0 0;
+    margin: 12px 0 0 15px;
     @media (min-width: @grid-float-breakpoint) {
       margin: 27px 0 0;
     }
